--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.9.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "morgan": "^1.10.0"
